data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_686.wast
;; 7. **Test Description 7**:    - Use a `loop` with integrated local variables that are manipulated within the loop, and use `br_if` instructions that depend on these variable values. Specifically, ensure the `br_if` conditions check the values correctly for branching decisions.

(assert_invalid
  (module
    (func $test
      (local $x i32)
      (i32.const 10)
      (local.set $x)
      (loop (result i32)
        (local.get $x)
        (i32.const 1)
        (i32.sub)
        (local.tee $x)
        (br_if 0 (local.get $x))
      )
      (drop)
    )
  )
  "type mismatch"
)